Avoid line breaks in the add comment button.

--- a/services/web/public/stylesheets/app/editor/review-panel.less
+++ b/services/web/public/stylesheets/app/editor/review-panel.less
@@ -456,6 +456,7 @@
 		border-radius: 3px;
 
 		.rp-in-editor-widgets & {
+			white-space: nowrap;
 			border-radius: 0;
 			border-bottom-left-radius: 3px;
 		}
